# Detection-de-collisions-3D-de-drones-avec-chiffrement-homomorphe

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README_sockets.md  TESTS_ET_PERFORMANCES.md  alice.py  attacker.py  bob.py  bob_malicious.py  cmake_install.cmake  compile_commands.json  drone_collision  drone_state.json  main.cpp  main_alice_bob.cpp  plot_batching.py  server.py
data/: col1.txt  col1_short.txt  col2_overlap.txt  col3_no_overlap.txt  create_example_paths.sh  cryptroute1.txt  cryptroute2.txt  cryptroute3.txt  cryptroute4.txt  cryptroute5.txt  cryptroute6.txt  grid_drone1.txt  grid_drone2.txt  grid_drone3.txt  grid_drone4.txt  grid_drone5.txt  grid_drone6.txt  init_drone.txt  multiple_routes.txt  other_drones.txt  star_drone1.txt  star_drone2.txt  star_drone3.txt  star_drone4.txt  star_drone5.txt  star_drone6.txt
include/: engine.hpp  engine_serial.hpp  geometry.hpp  intersection.hpp  io.hpp  protocol_types.hpp  protocol_utils.hpp  types.hpp
results/: bench_primitives.csv  benchmark_scalability.csv
src/: engine.cpp  geometry.cpp  intersection.cpp  io.cpp  main.cpp  main_batching.cpp  main_centralise.cpp  main_full_fhe.cpp  protocol_utils.cpp
tests/: plot_scalability.py  test_bench_primitives.cpp  test_benchmark_scalability.cpp  test_distance_threshold.cpp  test_fhe_oracle.cpp  test_fhe_validation.cpp  test_geometry_clear.cpp  test_integration.cpp  test_io.cpp  test_main.cpp  test_scalability.cpp
web/: demo.html  docs.html  index.html  live.html
